--- a/docroot/themes/custom/site/src/scss/custom/entities/node/full/_long-course.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/node/full/_long-course.scss
@@ -34,6 +34,12 @@
     }
   }
 }
+
+form.vih-subscription-long-course-order-form{
+  & article.user.compact{
+    margin-top: 120px;
+  }
+}
 // --------------------------------------------------
 // Variants
 // --------------------------------------------------
