--- a/docroot/themes/custom/site/templates/node/full/node--event.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--event.html.twig
@@ -96,98 +96,28 @@ view_mode ? view_mode|clean_class,
   <div{{ content_attributes.addClass('content') }}>
     <div class="container">
       <div class="row">
-        <div class="col-sm-6">
-          {{ content.field_vih_course_periods }}
-          {{ content.body }}
-        </div>
-        <div class="col-sm-6">
-          <h4 class="long-course-heading-sidebar">{{ 'Kom ud at rejse'|trans }}:</h4>
-          <h6 class="color-gray">{{ 'Skæddersy dit ophold paå tværs af fagpakker'|trans }}</h6>
-
-            <div class="row">
-              {% for travel_class in content.travel_classes %}
-                <div class="col-sm-6">
-                  {{ travel_class }}
-                </div>
-              {% endfor %}
-            </div>
-            <h4 class="long-course-heading-sidebar">{{ 'Fagpakker'|trans }}:</h4>
-            <h6 class="color-gray">{{ 'Skæddersy dit ophold på tværs af fagpakker'|trans }}</h6>
-
-            <div class="panel-group" id="accordionClassPackages">
-              <div class="panel-heading blue"><h4 class="panel-title"><a>{{ 'Fagpakker'|trans }}</a></h4></div>
-
-              {% for class_package_id,class_package in content.classes_packages %}
-                <div class="panel panel-default white-border-bottom">
-                  <div class="panel-heading accordion-{{ class_package.term['#taxonomy_term'].field_vih_class_package_color.value }}">
-                    <h4 class="panel-title">
-                      <a class="accordion-toggle collapsed"
-                         data-toggle="collapse"
-                         data-parent="#accordionClassPackages"
-                         href="#collapseClassPackage-{{ class_package_id }}">{{ class_package.name }}</a></h4>
-                  </div>
-                  <div id="collapseClassPackage-{{ class_package_id }}" class="panel-collapse collapse">
-                    <div class="panel-banner" style="background-image: url('{{ file_url(class_package.term['#taxonomy_term'].field_vih_cp_image.entity.fileuri) }}');">
-                      <div class="banner-spacer"></div>
-                      <div class="diagonal-end"></div>
-                    </div>
-                    <div class="panel-body term-body">
-                      {{ class_package.term }}
-                    </div>
-                  </div>
-                </div>
-              {% endfor %}
-            </div>
+        <div class="col-xs-6">
+            {{ content.body }}
         </div>
 
-
+        <div class="col-xs-6">
+            <div class="period-wrapper">
+                <div class="clock-icon"><i class="material-icons">access_time</i></div>
+                <div class="period-wrapper__dates">
+                    {{ content.field_event_start_date }}
+                    {{ content.field_event_end_date }}
+                </div>
+            </div>
+        </div>
       </div>
 
       <div class="row vih-btn-box">
         <div class="col-xs-12">
-          <a href="{{ url('vih_subscription.long_course_order_create', {'course': node.id}) }} " class="btn-arrow btn-center">{{ "Begynd nu"|trans }}</a>
-        </div>
-      </div>
-
-      <div class="row vih-contact-box">
-        <div class="col-xs-12">
-          <h4>{{ 'Har du spørgsmal til kurset?'|trans }}</h4>
-          {{ content.field_vih_cource_contact_person }}
-        </div>
-      </div>
-
-      <div class="row vih-price-box">
-        <div class="col-xs-12">
-          <h4>{{ "Prisoversigt"|trans }}:</h4>
-
-
-          <div class="price-table col-sm-12 col-md-4">
-            <div class="table-heading">
-              {{ "Materialegebyr"|trans }}
-            </div>
-            <div class="table-cell">
-              {{ content.field_vih_course_price }}
-            </div>
-          </div>
-          <div class="price-table col-sm-12 col-md-4">
-            <div class="table-heading">
-              {{ "Tilmeldingsgebyr"|trans }}
-            </div>
-            <div class="table-cell">
-              {{ content.field_vih_course_subsc_price }}
-            </div>
-          </div>
-          <div class="price-table col-sm-12 col-md-4">
-            <div class="table-heading">
-              {{ "Ugebetaling"|trans }}
-            </div>
-            <div class="table-cell">
-              {{ content.field_vih_course_week_price }}
-            </div>
-          </div>
+          <a href="{{ url('vih_subscription.event_order_create', {'event': node.id}) }} " class="btn-arrow btn-center">{{ "Køb nu"|trans }}</a>
         </div>
       </div>
     </div>
+
     <div class="row paragraphs">
       {{ content.field_paragraphs }}
     </div>
