VI-127 search field must replace the main menu

--- a/docroot/themes/custom/site/src/scss/custom/components/_navigation.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_navigation.scss
@@ -35,7 +35,9 @@ $navigation-bottom-border-color: #fff;
     margin: auto;
   }
 }
-
+.layout-navigation.layout-navigation--full-width.layout--large-screen-only{
+  position: relative;
+}
 // --------------------------------------------------
 // Variants
 // --------------------------------------------------
