--- a/docroot/themes/custom/site/templates/page/page.html.twig
+++ b/docroot/themes/custom/site/templates/page/page.html.twig
@@ -55,7 +55,7 @@
                     {% if node and node.getType == 'page' %}
                         {{ page.content }}
                     {% else %}
-                    <div class="angled-background-color angled-background-color-white">
+                    <div class="angled-background-color-page angled-background-color-white">
                         <div class="angled-background-inner" style="position: unset !important;">
                             <div class="container">
                                 {{ page.content }}
