--- a/docroot/themes/custom/site/templates/page/page--page.html.twig
+++ b/docroot/themes/custom/site/templates/page/page--page.html.twig
@@ -32,9 +32,9 @@
             {# Header #}
             {% if page.header %}
               {% block header %}
-                <div role="heading">
+                <div role="heading" class="page-heading">
                   <div class="angled-background-color angled-background-color-white">
-                    <div class="angled-background-inner" style="position: unset !important;">
+                    <div class="angled-background-inner page" style="position: unset !important;">
                       <div class="container">
 
                       </div>
