Top image style fix

--- a/docroot/themes/custom/site/templates/page/page--node--13.html.twig
+++ b/docroot/themes/custom/site/templates/page/page--node--13.html.twig
@@ -17,7 +17,7 @@
         <div class="layout__content">
             <div class="banner styleguide-banner">
                 <h1>Styleguide of VIH</h1> </div>
-            <div role="heading">
+            <div role="heading" class="page-heading">
                 <div class="angled-background-color angled-background-color-white">
                     <div class="angled-background-inner">
                         <div class="container"><p style="margin-top:50px;">This is a tiny style guide of Vejle Idrætshøjskole <br> developed &amp; designed by Simon Tofteby.</p> </div>
