--- a/docroot/themes/custom/site/templates/page/page--soeg.html.twig
+++ b/docroot/themes/custom/site/templates/page/page--soeg.html.twig
@@ -26,7 +26,7 @@
             {# Header #}
             {% if page.header %}
                 {% block header %}
-                    <div role="heading">
+                    <div role="heading" class="page-heading">
 
 
                                 <div class="container">
