--- a/docroot/themes/custom/site/templates/page/page--taxonomy--term--vih-class.html.twig
+++ b/docroot/themes/custom/site/templates/page/page--taxonomy--term--vih-class.html.twig
@@ -26,7 +26,7 @@
       {# Header #}
       {% if page.header %}
         {% block header %}
-          <div role="heading">
+          <div role="heading" class="page-heading">
             <div class="angled-background-color angled-background-color-white">
               <div class="angled-background-inner" style="position: unset !important;">
                 <div class="container">
