--- a/docroot/themes/custom/site/src/scss/custom/components/_header.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_header.scss
@@ -477,18 +477,23 @@
             .form-control {
               background-color: #0080af;
               color: #fff;
+              border: none;
               padding-left: 60px;
-              border: none;              
             }
             .form-control::-moz-placeholder {
               color: #fff;
+              text-align: center;
+              padding-right: 42px;
             }
             .form-control::-webkit-input-placeholder {
               color: #fff;
+              text-align: center;
+              padding-right: 42px;
             }
-
             .form-control:-ms-input-placeholder {
               color: #fff;
+              text-align: center;
+              padding-right: 42px;
             }
 
             .form-group-btn {
