--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -819,6 +819,7 @@ flex-direction: column;
     line-height: 1.5em;
     font-size: 24px;
     font-weight: bold;
+    margin-bottom: 150px;
   }
 }
 
