--- a/docroot/themes/custom/site/src/scss/custom/entities/taxonomy-term/teaser/_vih_class_table_teaser_modal.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/taxonomy-term/teaser/_vih_class_table_teaser_modal.scss
@@ -26,6 +26,7 @@
       font-family: 'Open Sans', sans-serif;
       font-weight: 700;
       color: #fff !important;
+      font-size: 16px;
     }
   }
   & .flex-center-middle{
@@ -36,6 +37,7 @@
     & .field-image-wrapper{
       text-transform: uppercase;
       font-weight: bold;
+      font-size: 16px;
     }
   }
 }
