--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -2187,3 +2187,6 @@ ul.layout-navigation {
   }
 }
 //  ***********************************
+.views-element-container.form-group{
+  width: 100%;
+}
