VI-139 long course subscribe page

--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-long-course-order-form.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-long-course-order-form.html.twig
@@ -77,7 +77,7 @@
 {# Adult data START #}
 <h5><i class="material-icons form-icon">account_circle</i> &nbsp;{{ "Kontaktpolysninger for forælder eller værge"|t }}</h5>
 <div class="row form-group">
-    <div class="col-md-6">
+    <div class="col-md-6 form-group">
         {{ form['adultDataLeft'] }}
     </div>
     <div class="col-md-6">
