--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -539,11 +539,6 @@ table .btn-radio-select.active {
   box-shadow: none;
 }
 
-.path-langeophold .field--name-field-vih-class-image {
-  height: 150px;
-  overflow: hidden;
-}
-
 .form-select {
   background: #f5f5f5;
   border: 1px solid #e1e1e1;
@@ -1073,7 +1068,7 @@ flex-direction: column;
   justify-content: center;
 }
 
-.path-node .news-container {
+.news-container {
   padding-bottom: 0px!important;
   position: relative;
   z-index: 99;
