--- a/docroot/themes/custom/site/templates/taxonomy-term/radio-selection/taxonomy-term--vih-class--radio-selection.html.twig
+++ b/docroot/themes/custom/site/templates/taxonomy-term/radio-selection/taxonomy-term--vih-class--radio-selection.html.twig
@@ -35,10 +35,10 @@
       <div class="col-xs-12 col-sm-6">
         {{ content['field_vih_class_image'] }}
       </div>
-      <div class="col-xs-12 col-sm-3">
+      <div class="col-xs-12 col-sm-3 description">
         {{ content['description'] }}
       </div>
-      <div class="col-xs-12 col-sm-3">
+      <div class="col-xs-12 col-sm-3 selection-buttons">
         {#{{ content['description'] }}#}
         {#</td>#}
         {#</tr>#}
