--- a/docroot/themes/custom/site/src/scss/custom/entities/taxonomy-term/teaser/_vih_class_table_teaser_modal.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/taxonomy-term/teaser/_vih_class_table_teaser_modal.scss
@@ -40,6 +40,13 @@
       font-size: 16px;
     }
   }
+  & .modal-dialog{
+    & .field.field--name-description{
+      & h1, h2, h3, h4, h5, p{
+        color: #888;
+      }
+    }
+  }
 }
 
 // --------------------------------------------------
