--- a/docroot/themes/custom/site/src/scss/custom/entities/node/full/_long-course.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/node/full/_long-course.scss
@@ -17,16 +17,19 @@
 // --------------------------------------------------
 
 // Long Course
-.path-node.page-node-type-vih-long-cource{
-  & .price-table{
+.path-node.page-node-type-vih-long-cource {
+  .travel-class-container {
+    margin-bottom: 30px;
+  }
+  .price-table {
     border: 1px solid #ddd;
     background: none;
     text-align: center;
     padding: 0; 
-    & .table-cell{
+    .table-cell {
       padding: 32px 10px;
     }
-    & .table-heading{
+    .table-heading {
       padding: 15px;
       text-transform: uppercase;
       background-color: rgb(238, 238, 238);
