--- a/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
@@ -106,7 +106,7 @@ view_mode ? view_mode|clean_class,
 
             <div class="row">
               {% for travel_class in content.travel_classes %}
-                <div class="col-sm-6">
+                <div class="col-sm-6 travel-class-container">
                   {{ travel_class }}
                 </div>
               {% endfor %}
