VI-125 main dropdown menu border fix

--- a/docroot/themes/custom/site/src/scss/custom/components/_navbar.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_navbar.scss
@@ -1,6 +1,13 @@
 // --------------------------------------------------
 // Variants
 // --------------------------------------------------
+.navbar.navbar-default.hidden-xs{
+  border: none !important;
+  border-bottom: 1px solid #ccc;
+  & .dropdown-menu.layout-navigation__dropdown-menu{
+    border-color: #ccc;
+  }
+}
 
 // --------------------------------------------------
 // Responsive
