VI-108 order pages styles, removing extra roles, permissions for order nodes

--- a/docroot/themes/custom/site/src/scss/custom/entities/node/full/_loader.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/node/full/_loader.scss
@@ -1,5 +1,6 @@
 @import 'full';
 @import 'long-course-order';
+@import 'short-course-order';
 @import 'long-course';
 @import 'event';
 @import 'course_period';
