--- a/docroot/themes/custom/site/templates/page/page--vih-short-course-order.html.twig
+++ b/docroot/themes/custom/site/templates/page/page--vih-short-course-order.html.twig
@@ -1,5 +1,5 @@
 <!-- Begin - wrapper -->
-<div class="layout__wrapper layout--fixed-header layout__news long-course-order">
+<div class="layout__wrapper layout--fixed-header layout__news short-course-order">
   {{ drupal_block('popup_cta') }}
   <!-- Begin - drawer -->
   <div class="layout__drawer" aria-hidden="true">
