--- a/docroot/themes/custom/site/src/scss/custom/entities/node/full/_event.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/node/full/_event.scss
@@ -14,6 +14,58 @@
 // --------------------------------------------------
 // Styling
 // --------------------------------------------------
+.view.view-eventside.view-id-eventside.view-display-id-embedded_teaser_list{
+  & article.event.embedded-teaser-list{
+    & .content{
+      & .flexbox-middle{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        & .field_image{
+          position: relative;
+          width: 100%;
+          height: 100%;
+          & .triangle-red{
+            position: absolute;
+    width: 100%;
+    height: 100%;
+    clip-path: polygon(0 90%, 100% 60%, 100% 100%, 0% 100%);
+    -webkit-clip-path: polygon(0 90%, 100% 60%, 100% 100%, 0% 100%);
+    background: rgba(255, 0, 95, 0.75);
+          }
+        }
+        & .field.field--name-body{
+          margin: 0 !important;
+          padding: 0 !important;
+          & p{
+            color: #888;
+            text-transform: unset;
+            font-family: "Open Sans", Sens-serif !important;
+            font-size: 0.85em !important;
+            line-height: 18px;
+          }
+        }
+        & h2 a span{
+          color: #000;
+          font-size: 16px;
+          font-weight: bold;
+          font-family: 'Open Sans', sans-serif;
+        }
+      }
+      & .views-field.views-field-view-node{
+       display: block;
+       text-align: center;
+       padding: 0;
+       margin-top: 15px;
+       margin-bottom: 15px;
+      }
+      & .period-wrapper__dates{
+        margin-bottom: 15px;
+      }
+    }
+  }
+}
 
 .path-node.page-node-type-event{
   .field--name-body {
