VI-140 paragraph class package accordion created

--- a/docroot/themes/custom/site/src/scss/custom/entities/paragraph/type/_loader.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/paragraph/type/_loader.scss
@@ -4,3 +4,4 @@
 @import '_paragraph-type-file';
 @import '_paragraph-type-teacher-class-description';
 @import '_paragraph-type-user-quote';
+@import '_paragraph_type_class_package_accordion';
