VI-141 chancing format of heading and subheading

--- a/docroot/themes/custom/site/templates/page/page--vih-long-cource.html.twig
+++ b/docroot/themes/custom/site/templates/page/page--vih-long-cource.html.twig
@@ -44,11 +44,11 @@
               {{ page.breadcrumb }}
               <hr>
               {% if node.title.value %}
-                <h3 class="node-page-title">{{ node.field_course_heading.value }}</h3>
-                <h5 class="course-subheading">- {{ node.field_course_subheading.value }}</h5>
+                <h3 class="node-page-title">{{ node.field_vih_course_heading.value }}</h3>
+                <h5 class="course-subheading">- {{ node.field_vih_course_subheading.value }}</h5>
               {% elseif page['#title'] %}
-                <h3>{{ node.field_course_heading.value }}</h3>
-                <h5>{{ node.field_course_subheading.value }}</h5>
+                <h3>{{ node.field_vih_course_heading.value }}</h3>
+                <h5>{{ node.field_vih_course_subheading.value }}</h5>
               {% endif %}
 
 
