VI-104 adding short course start end dates

--- a/docroot/themes/custom/site/src/scss/custom/entities/node/full/_loader.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/node/full/_loader.scss
@@ -2,5 +2,6 @@
 @import 'long-course-order';
 @import 'short-course-order';
 @import 'long-course';
+@import 'short-course';
 @import 'event';
 @import 'course_period';
