--- a/docroot/themes/custom/site/src/scss/custom/entities/paragraph/type/_paragraph-type-user-quote.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/paragraph/type/_paragraph-type-user-quote.scss
@@ -19,23 +19,12 @@
   margin-bottom: 140px;
   & .angled-background-inner{
     & .container{
-      align-items: left;
-      & .field.field--name-field-paragraph-user{
-        margin-top: 30px;
-        margin-bottom: 30px;
-        font-size: 28px;
-      }
-      & .field.field--name-field-paragraph-text{
+      p {
         color: #888;
-        & p{
-          color: #888;
-              font-weight: 400;
-              text-transform: none;
-              text-align: left;
-              font-weight: normal !important;
-              line-height: 26px;
-              font-size: 16px;
-        }
+        text-align: left;
+        font-size: 0.9em;
+        text-transform: inherit;
+        font-weight: normal !important;
       }
     }
   }
